--- a/data_merge.ipynb
+++ b/data_merge.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5b7cde16",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1697cdee",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "317a5963",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "3cf89853",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "4ed75125",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "3d7cba8c",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "14f5bad1",
    "metadata": {},
    "outputs": [
@@ -333,6 +333,308 @@
     "plt.title('Mean of Quantity per Employee (Ordered)')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "86c33f3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          EmpID  Sum_Quantity  Mean_Quantity  Min_Quantity  Max_Quantity\n",
+      "0   900010405.0        1473.0       9.149068           1.0         102.0\n",
+      "1   900010430.0        1508.0      11.689922           1.0         108.0\n",
+      "2   900010813.0         722.0      13.622642           1.0          99.0\n",
+      "3   900010836.0        1391.0      10.303704           1.0         108.0\n",
+      "4   900010875.0        1213.0      13.184783           1.0         101.0\n",
+      "5   900011056.0         887.0      14.540984           1.0         103.0\n",
+      "6   900011189.0        1339.0      20.921875           1.0         101.0\n",
+      "7   900011678.0        1108.0      11.787234           1.0         105.0\n",
+      "8   900012180.0         913.0       9.712766           1.0          95.0\n",
+      "9   900012258.0         628.0      10.129032           1.0          64.0\n",
+      "10  900012260.0         402.0       7.584906           1.0          96.0\n",
+      "11  900012297.0         500.0       8.928571           1.0          94.0\n",
+      "12  900012326.0        1298.0       9.544118           1.0         109.0\n",
+      "13  900012483.0        1437.0      13.817308           1.0         108.0\n",
+      "14  900012723.0        2497.0      10.951754           1.0         100.0\n",
+      "15  900012972.0        1800.0      10.404624           1.0         104.0\n",
+      "16  900013387.0        1642.0      11.246575           1.0         101.0\n",
+      "17  900013587.0         618.0      10.131148           1.0         103.0\n",
+      "18  900013598.0         953.0      10.707865           1.0          92.0\n",
+      "19  900013626.0        2584.0      10.949153           1.0         102.0\n",
+      "20  900014032.0        1068.0      12.714286           1.0         104.0\n",
+      "21  900014598.0        2310.0      15.098039           1.0         109.0\n",
+      "22  900014980.0        1362.0      11.741379           1.0         104.0\n",
+      "23  900015082.0        1887.0      10.970930           1.0         104.0\n",
+      "24  900015476.0         738.0      10.394366           1.0         101.0\n",
+      "25  900015673.0         904.0      13.492537           1.0         104.0\n",
+      "26  900015938.0        2664.0      13.253731           1.0         109.0\n",
+      "27  900016088.0        1431.0      11.729508           1.0         106.0\n",
+      "28  900016297.0        1284.0       9.372263           1.0         104.0\n",
+      "29  900016392.0         613.0      10.754386           1.0          82.0\n",
+      "30  900016416.0        2050.0      11.988304           1.0         103.0\n",
+      "31  900016602.0        1238.0       9.378788           1.0         106.0\n",
+      "32  900017044.0         769.0      11.144928           1.0          99.0\n",
+      "33  900017930.0         459.0       8.052632           1.0          60.0\n",
+      "34  900018190.0        2223.0      11.059701           1.0         109.0\n",
+      "35  900018460.0        1652.0      12.906250           1.0         102.0\n",
+      "36  900018661.0        1941.0      10.664835           1.0         106.0\n",
+      "37  900018689.0        1298.0       8.320513           1.0          84.0\n",
+      "38  900018996.0        1205.0      12.050000           1.0          98.0\n",
+      "39  900019250.0         392.0      10.051282           1.0          74.0\n",
+      "40  900019311.0         704.0       7.257732           1.0          88.0\n",
+      "41  900019833.0         872.0       8.149533           1.0         109.0\n",
+      "42  900019884.0         628.0       9.968254           1.0          92.0\n",
+      "43  900019978.0         665.0      10.075758           1.0          88.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "summary_metrics_df = pd.DataFrame({\n",
+    "\t'EmpID': sum_sales_quantity.index,\n",
+    "\t'Sum_Quantity': sum_sales_quantity.values,\n",
+    "\t'Mean_Quantity': mean_sales_quantity.values,\n",
+    "\t'Min_Quantity': min_sales_quantity.values,\n",
+    "\t'Max_Quantity': max_sales_quantity.values\n",
+    "})\n",
+    "\n",
+    "print(summary_metrics_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ed2233bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EmpID</th>\n",
+       "      <th>Sum_Quantity</th>\n",
+       "      <th>Mean_Quantity</th>\n",
+       "      <th>Min_Quantity</th>\n",
+       "      <th>Max_Quantity</th>\n",
+       "      <th>Employee Name</th>\n",
+       "      <th>JobTitle</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>StartDate</th>\n",
+       "      <th>EndDate</th>\n",
+       "      <th>FirstName</th>\n",
+       "      <th>LastName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>900010405.0</td>\n",
+       "      <td>1473.0</td>\n",
+       "      <td>9.149068</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>Ara Dumbreck</td>\n",
+       "      <td>Sales Representative</td>\n",
+       "      <td>N Central East</td>\n",
+       "      <td>8/27/2019</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ara</td>\n",
+       "      <td>Dumbreck</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>900010430.0</td>\n",
+       "      <td>1508.0</td>\n",
+       "      <td>11.689922</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>Jason Bellamy</td>\n",
+       "      <td>Senior Sales Representative</td>\n",
+       "      <td>Central East</td>\n",
+       "      <td>2/25/2003</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Jason</td>\n",
+       "      <td>Eisold</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>900010813.0</td>\n",
+       "      <td>722.0</td>\n",
+       "      <td>13.622642</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>Willow Townsend</td>\n",
+       "      <td>Senior Sales Representative</td>\n",
+       "      <td>Northwest</td>\n",
+       "      <td>11/10/2008</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Willow</td>\n",
+       "      <td>Tunnick</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>900010836.0</td>\n",
+       "      <td>1391.0</td>\n",
+       "      <td>10.303704</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>Esmeralda Crenshaw</td>\n",
+       "      <td>Sales Representative</td>\n",
+       "      <td>S Central East</td>\n",
+       "      <td>6/22/2002</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ezmeralda</td>\n",
+       "      <td>Crenshaw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>900010875.0</td>\n",
+       "      <td>1213.0</td>\n",
+       "      <td>13.184783</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>Erin Otis</td>\n",
+       "      <td>Sales Associate II</td>\n",
+       "      <td>Southwest</td>\n",
+       "      <td>1/8/2011</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Darnall</td>\n",
+       "      <td>Oris</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         EmpID  Sum_Quantity  Mean_Quantity  Min_Quantity  Max_Quantity  \\\n",
+       "0  900010405.0        1473.0       9.149068           1.0         102.0   \n",
+       "1  900010430.0        1508.0      11.689922           1.0         108.0   \n",
+       "2  900010813.0         722.0      13.622642           1.0          99.0   \n",
+       "3  900010836.0        1391.0      10.303704           1.0         108.0   \n",
+       "4  900010875.0        1213.0      13.184783           1.0         101.0   \n",
+       "\n",
+       "        Employee Name                     JobTitle          Region  \\\n",
+       "0        Ara Dumbreck         Sales Representative  N Central East   \n",
+       "1       Jason Bellamy  Senior Sales Representative    Central East   \n",
+       "2     Willow Townsend  Senior Sales Representative       Northwest   \n",
+       "3  Esmeralda Crenshaw         Sales Representative  S Central East   \n",
+       "4           Erin Otis           Sales Associate II       Southwest   \n",
+       "\n",
+       "    StartDate EndDate  FirstName  LastName  \n",
+       "0   8/27/2019     NaN        Ara  Dumbreck  \n",
+       "1   2/25/2003     NaN      Jason    Eisold  \n",
+       "2  11/10/2008     NaN     Willow   Tunnick  \n",
+       "3   6/22/2002     NaN  Ezmeralda  Crenshaw  \n",
+       "4    1/8/2011     NaN    Darnall      Oris  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_associates_df = pd.read_csv('red_30_tech_us_sales_associates.csv')\n",
+    "\n",
+    "merged_df = summary_metrics_df.merge(sales_associates_df, on='EmpID', how='inner')\n",
+    "\n",
+    "merged_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5345644f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "EmpID             0\n",
+       "Sum_Quantity      0\n",
+       "Mean_Quantity     0\n",
+       "Min_Quantity      0\n",
+       "Max_Quantity      0\n",
+       "Employee Name     0\n",
+       "JobTitle          0\n",
+       "Region            0\n",
+       "StartDate         0\n",
+       "EndDate          40\n",
+       "FirstName         0\n",
+       "LastName          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e80b92b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(44)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary_metrics_df['EmpID'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b171de55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(44)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df['EmpID'].count()"
    ]
   }
  ],
