--- a/data_merge.ipynb
+++ b/data_merge.ipynb
@@ -3473,6 +3473,16 @@
     "\n",
     "merged_df.head(44)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "40cdb1ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df.to_csv('us_sales_statistics_by_associate.csv')"
+   ]
   }
  ],
  "metadata": {
