--- a/data_load.ipynb
+++ b/data_load.ipynb
@@ -43,6 +43,48 @@
    "source": [
     "df.to_sql('sales_statistics_by_associate', conn, if_exists='replace',index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "02476e4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded us_sales_statistics_by_associate.csv into the database as us_sales_statistics_by_associate\n",
+      "Loaded red_30_tech_us_sales_regions.csv into the database as red_30_tech_us_sales_regions\n",
+      "Loaded red_30_tech_us_sales_cleaned.csv into the database as red_30_tech_us_sales_cleaned\n",
+      "Loaded red_30_tech_us_sales.csv into the database as red_30_tech_us_sales\n",
+      "Loaded red_30_tech_us_sales_associates.csv into the database as red_30_tech_us_sales_associates\n",
+      "Loaded red_30_tech_us_customer_info.csv into the database as red_30_tech_us_customer_info\n",
+      "Loaded red_30_tech_us_product_info.csv into the database as red_30_tech_us_product_info\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import sqlite3\n",
+    "import os\n",
+    "\n",
+    "conn = sqlite3.connect('database.db')\n",
+    "\n",
+    "csv_directory = '/workspaces/complete-guide-to-analytics-engineering-3808116/csv_files'\n",
+    "\n",
+    "for filename in os.listdir(csv_directory):\n",
+    "    if filename.endswith('.csv'):\n",
+    "        file_path = os.path.join(csv_directory, filename)\n",
+    "        df = pd.read_csv(file_path)\n",
+    "\n",
+    "        table_name = filename.replace('.csv', '')\n",
+    "\n",
+    "        df.to_sql(table_name, conn, if_exists='replace', index=False)\n",
+    "        print(f\"Loaded {filename} into the database as {table_name}\")\n",
+    "\n",
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
